objects/Hold__c.object
<CustomObject><fields>
        <fullName>Active_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active Hold</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Hold_Administrator__c</fullName>
        <label>Hold Administrator</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Hold_End_Date__c</fullName>
        <label>Hold End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Hold_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Hold External ID</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Hold_Start_Date__c</fullName>
        <label>Hold Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Processes_Affected__c</fullName>
        <label>Processes Affected</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Student__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Holds</relationshipLabel>
        <relationshipName>Holds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <description>Type of Hold</description>
        <label>Type</label>
        <length>175</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Administrative Holds</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Hold</label><nameField>
        <label>Hold Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Holds</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active_Hold__c</columns>
        <columns>Student__c</columns>
        <columns>Reason__c</columns>
        <columns>Hold_Start_Date__c</columns>
        <columns>Hold_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>